<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Player"
    android:background="#f5fcf6"
    android:orientation="vertical"
    android:gravity="top">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/song_name"
        android:textColor="#6200EE"
        android:textSize="35sp"
        android:layout_gravity="center"
        android:layout_marginTop="50sp"/>

    <ImageView
            android:id="@+id/imageView"
            android:layout_width="350dp"
            android:layout_height="320dp"
            android:layout_gravity="center"
            android:contentDescription="@string/musicImage"
            android:src="@drawable/music" />

    <LinearLayout
        android:id="@+id/seekBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="30sp">

        <TextView
            android:id="@+id/start"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/start"
            android:gravity="center"/>

        <SeekBar
            android:id="@+id/bar"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:gravity="center"/>

        <TextView
            android:id="@+id/stop"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/end"
            android:gravity="center"/>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/buttonPanel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="30sp">

        <Button
            android:id="@+id/reverse"
            android:layout_width="70sp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/reverse"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/pause"
            android:layout_width="70sp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/pause"
            tools:ignore="ButtonStyle"
            android:layout_toRightOf="@id/reverse"
            android:layout_toEndOf="@id/reverse" />

        <Button
            android:id="@+id/play"
            android:layout_width="70sp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/play"
            tools:ignore="ButtonStyle"
            android:layout_toRightOf="@id/pause"
            android:layout_toEndOf="@id/pause"/>

        <Button
            android:id="@+id/forward"
            android:layout_width="70sp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/forward"
            tools:ignore="ButtonStyle"
            android:layout_toRightOf="@id/play"
            android:layout_toEndOf="@id/play" />

    </RelativeLayout>

</LinearLayout>